  setting of an `Error.prepareStackTrace` handler until necessary for stacktrace
  collection. ({issues}2833[#2833] {pull}2906[#2906])

* Add `*principal*` pattern to default value for `sanitizeFieldNames` config
  var, so that it is more likely to redact authentication-related HTTP headers,
  e.g. on Azure. ({issues}2938[#2938])

[float]
===== Bug fixes

* Fix instrumentation of (very old) 'graphql' module versions <=0.9.6.
  Instrumentation of these older graphql versions was broken in v3.36.0.
  ({pull}2927[#2927])

[float]
===== Chores

* Disable knex instrumentation when not collecting span stack traces
  (because there is no point). This is a performance improvement for
  Knex usage in the default configuration. ({pull}2879[#2879])


[[release-notes-3.38.0]]
==== 3.38.0 2022/08/11

[float]
===== Features

- Add instrumentation for the https://undici.nodejs.org[undici] HTTP client
  library. This also adds instrumentation of Node.js v18's
  https://nodejs.org/api/all.html#all_globals_fetch[`fetch()`], which uses
  undici under the hood. For the instrumentation to work one must be using
  node v14.17.0 or later, or have installed the
  https://www.npmjs.com/package/diagnostics_channel['diagnostics_channel' polyfill].
  ({issues}2383[#2383])

- Added `exitSpanMinDuration` configuration field, allowing end users to
  set a time threshold for dropping exit spans. ({pull}2843[#2843])

[float]
===== Bug fixes

- Capturing an error would fail if the Error instance had an attribute that
  was an invalid date. ({issues}2030[#2030])

- Fix the span for an instrumented S3 ListBuckets API call to not be invalid
  for APM server intake. ({pull}2866[#2866])

- Fix an issue where the transaction `name` for a trace of a Lambda function
  implementing a GraphQL server (e.g. via https://www.apollographql.com/docs/apollo-server/deployment/lambda/[apollo-server-lambda])
  would not get the GraphQL-specific naming. ({issues}2832[#2832])


[[release-notes-3.37.0]]