@@ -8,17 +8,29 @@
 
 var microtime = require('relative-microtime')
 
+/**
+ * Return `time`, if given and valid, or the current time (calculated using
+ * the given `timer`).
+ *
+ * @param {Timer} timer
+ * @param {Number} [time] - An optional float number of milliseconds since
+ *    the epoch (i.e. the same as provided by `Date.now()`).
+ * @returns {Number} A time in *microseconds* since the Epoch.
+ */
 function maybeTime (timer, time) {
-  if (timer._parent) return maybeTime(timer._parent, time)
-  return time >= 0 ? time * 1000 : timer._timer()
+  if (time >= 0) {
+    return time * 1000
+  } else {
+    return timer._timer()
+  }
 }
 
 module.exports = class Timer {
   // `startTime`: millisecond float
-  constructor (timer, startTime) {
-    this._parent = timer
-    this._timer = timer ? timer._timer : microtime()
-    this.start = maybeTime(this, startTime) // microsecond integer
+  constructor (parentTimer, startTime) {
+    this._parent = parentTimer
+    this._timer = parentTimer ? parentTimer._timer : microtime()
+    this.start = maybeTime(this, startTime) // microsecond integer (note: might not be an integer)
     this.endTimestamp = null
     this.duration = null // millisecond float
     this.selfTime = null // millisecond float
