@@ -53,6 +53,13 @@ function Transaction (agent, name, ...args) {
     ? (args.pop() || {})
     : {}
 
+  if (opts.timer) {
+    process.emitWarning(
+      'specifying the `timer` option to `new Transaction()` was never a public API and will be removed',
+      'DeprecationWarning',
+      'ELASTIC_APM_SPAN_TIMER_OPTION'
+    )
+  }
   if (opts.tracestate) {
     opts.tracestate = TraceState.fromStringFormatString(opts.tracestate)
   }
